<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.esigelec.bluetoothbot.AboutActivity">

    <RelativeLayout
        android:layout_width="379dp"
        android:layout_height="507dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_below="@+id/imageButton3"
            android:layout_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_author1"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="393dp"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_author2"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="370dp"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_creators"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="346dp"
            tools:textStyle="bold"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="69dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@android:style/Widget.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/petit_logo"
            tools:layout_editor_absoluteX="226dp"
            tools:layout_editor_absoluteY="141dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.2"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="204dp"
            android:layout_above="@+id/textView9"
            android:layout_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_version"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="204dp"
            tools:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="205dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
